<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_enemies"
        android:icon="@drawable/ic_skull"
        android:title="@string/enemies" />
    <item
        android:id="@+id/nav_challenges"
        android:icon="@drawable/ic_flash"
        android:title="@string/challenges" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/nav_run"
        android:icon="@drawable/ic_run"
        android:title="@string/run" />
    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/ic_graph"
        android:title="@string/activity" />
</menu>
