<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="15dp"
        android:text="@string/start"
        app:backgroundTint="@color/green"
        android:background="@drawable/fab_background"/>

    <Button
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:elevation="15dp"
        android:text="@string/end"
        app:backgroundTint="@color/red"
        android:background="@drawable/fab_background"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/end_button"
        android:elevation="15dp"
        android:text="@string/pause"
        app:backgroundTint="@color/orange"
        android:background="@drawable/fab_background"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/end_button"
        android:elevation="15dp"
        android:text="@string/continue_label"
        app:backgroundTint="@color/green"
        android:background="@drawable/fab_background"
        android:visibility="gone"
        tools:visibility="visible"/>
</RelativeLayout>