<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/end_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_end_background"
        android:text="@string/end"
        android:textAlignment="center"
        android:textColor="@color/white"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/end_button"
        android:text="@string/pause"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/button_pause_background" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/end_button"
        android:text="@string/continue_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/button_start_background"
        android:visibility="gone"/>
</RelativeLayout>