<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="15dp">
        <TextView
            android:id="@+id/gps_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/gps"
            android:textSize="18sp"
            android:textColor="@color/red"/>
        <ImageView
            android:id="@+id/gps_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/gps_flag"
            android:src="@drawable/ic_check"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/distance_reset"
            android:textSize="45sp"/>
        <TextView
            android:id="@+id/distance_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance"
            android:gravity="center"
            android:text="@string/distance_label"
            tools:text="Distance (km)"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/distance_label"
            android:orientation="vertical">
            <TextView
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/timer_reset"
                tools:text="00:00:00"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/duration_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/duration"
                tools:text="Duration"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/distance_label"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tempo_reset"
                android:textSize="25sp"
                tools:text="00:00" />
            <TextView
                android:id="@+id/tempo_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tempo_label"
                tools:text="Tempo (min/km)"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/map_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="bottom"/>

        <include
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            layout="@layout/run_buttons"/>
    </RelativeLayout>
</LinearLayout>