<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    android:elevation="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_layout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        card_view:cardElevation="0dp"
        card_view:cardCornerRadius="40dp"
        card_view:cardPreventCornerOverlap="false">
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_big_profile_round"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/image_layout"
        android:text="@string/challenge_date"
        android:textSize="20sp"
        tools:text="Challenge 16.2.2019"/>

    <TextView
        android:id="@+id/opponent_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/image_layout"
        android:layout_below="@+id/start_date"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/against_user"
        android:textSize="20sp"
        tools:text="Against username"/>

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/opponent_username"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/user_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge_distance"
                android:textSize="18sp"
                tools:text="15km"/>

            <TextView
                android:id="@+id/user_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:text="WINNER" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/opponent_result_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opponent_username_result"
                android:textSize="18sp"
                tools:text="Username result:"/>
            <TextView
                android:id="@+id/opponent_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge_distance"
                android:textSize="18sp"
                tools:text="10 km"/>
            <TextView
                android:id="@+id/opponent_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                tools:text="LOOSER"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>