<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    android:elevation="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_layout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        card_view:cardElevation="0dp"
        card_view:cardCornerRadius="40dp"
        card_view:cardPreventCornerOverlap="false">
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:src="@mipmap/ic_big_profile_foreground"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/image_layout"
        android:text="@string/challenge_date"
        android:textSize="20sp"
        tools:text="Challenge 16.2.2019"/>

    <TextView
        android:id="@+id/opponent_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/image_layout"
        android:layout_below="@+id/start_date"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/against_user"
        android:textSize="20sp"
        tools:text="Against username"/>


    <RelativeLayout
        android:id="@+id/result_and_button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opponent_username"
        android:visibility="gone">

        <TextView
            android:id="@+id/your_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/your_result"
            android:textSize="15sp"
            tools:text="Your result: ...km"/>
        <TextView
            android:id="@+id/waiting_for_opponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/your_result"
            android:text="@string/waiting_for_result"
            android:textSize="15sp"
            tools:text="Waiting for username result"/>

        <Button
            android:id="@+id/quit_challenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/fab_background"
            app:backgroundTint="@color/red"
            android:text="@string/quit"/>
    </RelativeLayout>
</RelativeLayout>